--- a/course-reviews-api/build.gradle
+++ b/course-reviews-api/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-rest', version: '2.1.4.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.4.RELEASE'
     compile group: 'com.h2database', name: 'h2', version: '1.4.199'
+    compile group: 'org.springframework.data', name: 'spring-data-rest-hal-browser', version: '3.1.6.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.4.RELEASE'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
